@@ -550,6 +550,7 @@ SIP Send allow us to send a customized SIP message and analyze the response.
     parser.add_argument('-o', '--output_file', type=str, help='Save data into a log file', dest='ofile', default='')
     parser.add_argument('-ppi', type=str, help='P-Preferred-Identity', dest='ppi', default='')
     parser.add_argument('-pai', type=str, help='P-Asserted-Identity', dest='pai', default='')
+    parser.add_argument('-header', type=str, help='Add custom header (ex: "Allow-Events: presence"', dest='header', default='')
 
     # Array for all arguments passed to script
     args = parser.parse_args()
@@ -585,8 +586,9 @@ SIP Send allow us to send a customized SIP message and analyze the response.
     OFILE = args.ofile
     PPI = args.ppi
     PAI = args.pai
+    HEADER = args.header
 
-    return IPADDR, HOST, PROXY, RPORT, LPORT, PROTO, METHOD, DOMAIN, CONTACTDOMAIN, FROMNAME, FROMUSER, FROMDOMAIN, FROMTAG, TONAME, TOUSER, TODOMAIN, TOTAG, USER, PWD, DIGEST, BRANCH, CALLID, CSEQ, SDP, SDES, UA, LOCALIP, NOCOLOR, OFILE, PPI, PAI
+    return IPADDR, HOST, PROXY, RPORT, LPORT, PROTO, METHOD, DOMAIN, CONTACTDOMAIN, FROMNAME, FROMUSER, FROMDOMAIN, FROMTAG, TONAME, TOUSER, TODOMAIN, TOTAG, USER, PWD, DIGEST, BRANCH, CALLID, CSEQ, SDP, SDES, UA, LOCALIP, NOCOLOR, OFILE, PPI, PAI, HEADER
 
 
 def get_sipenumerate_args():
